--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -98,13 +98,12 @@
                     <form action="" method="none">
                         <div class="product-id">1</div>
 
-                        <div class="product-img part edit-class on-edit" name="product-img">
+                        <div class="product-img part edit-class on-edit" name="product-img" id="gallery">
                             <label for="product-img">product Image :</label>
                             <img src="/images/Daco_1494767.png" alt="">
                             <input type="file" id="choose-file" name="choose-file" accept="image/*">
                             <p class="note">*chose new image if you want change the current
                                 image*</p>
-
                         </div>
                         <div class="part s">
                             <label>product name :</label>
@@ -161,7 +160,7 @@
                 <div class="price-container input-field-container">
                     <label>price</label>
                     <input type="number" min="0" value="0" name="product-price" class="product-desc input-style"
-                        placeholder="Product Name" autocomplete="off" required />
+                        autocomplete="off" required /> 
                 </div>
                 <div class="type-container input-field-container">
                     <label>type</label>
@@ -174,7 +173,7 @@
                 </div>
                 <div class="image-container input-field-container">
                     <label>image</label>
-                    <input type="file" name="product-image" class="product-name input-style" placeholder="Product Name"
+                    <input type="file" name="product-image" class="product-name input-style"
                         autocomplete="off" required />
 
                 </div>
