last update for product page

--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -83,8 +83,8 @@
                     <div class="type-show">hotdrinks</div>
                     <label>type</label>
                     <select name="product-type" id="#type">
-                        <option value="hotdrinks" selected>hotDrinks</option>
-                        <option value="colddrinks">coldDrinks</option>
+                        <option value="hot-drinks" selected>hot Drinks</option>
+                        <option value="cold-drinks">cold Drinks</option>
                         <option value="food">food</option>
                         <option value="dessert">dessert</option>
                     </select>
