update all changes

--- a/views/admin/customer.ejs
+++ b/views/admin/customer.ejs
@@ -62,7 +62,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    
+
                 </tbody>
             </table>
         </div>
@@ -75,15 +75,15 @@
                     <input type="text" name="name" class="name input-style" placeholder="Name" autocomplete="off"
                         required />
                 </div>
-                <div class="username-container input-field-container">
+                <div class="phone-container input-field-container">
                     <i class="fa-solid fa-phone"></i>
-                    <input type="email" name="phone" class="phone input-style" placeholder="Phone Number 05xxxxxxxx" autocomplete="off"
-                        required />
+                    <input type="phone" name="phone" class="phone input-style" placeholder="Phone Number 05xxxxxxxx"
+                        autocomplete="off" required />
                 </div>
                 <div class="email-container input-field-container">
                     <i class="fa-solid fa-envelope"></i>
-                    <input type="text" name="email" class="email input-style" placeholder="Email"
-                        autocomplete="off" required />
+                    <input type="text" name="email" class="email input-style" placeholder="Email" autocomplete="off"
+                        required />
                 </div>
                 <div class="status-container input-field-container">
                     <i class="fa-solid fa-user-tie"></i>
@@ -109,6 +109,7 @@
         <div class="three"></div>
     </div>
     <!-- end preloading -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-customers.js"></script>
 </body>
 
