--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -63,11 +63,11 @@
                 </div>
                 <div class="password-container part">
 
-                    <label for="old-password">old password</label>
+                    <label for="old-password">old password </label>
                     <input type="password" class="old-password" name="old-password">
                 </div>
                 <div class="password-container part">
-                    <label for="new-password">new password</label>
+                    <label for="new-password">new password : </label>
                     <input type="password" class="new-password" name="new-password">
                 </div>
 
@@ -94,4 +94,5 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-profile.js"></script>
 </body>
+
 </html>
