--- a/views/reservation.html
+++ b/views/reservation.html
@@ -50,7 +50,7 @@
             <h2>book table</h2>
             <input type="text" class="person-name" placeholder="your name" required>
             <input type="text" class="person-phone" placeholder="phone number" required>
-            <input type="number" class="persons-number" placeholder="number of persons" min="1" required>
+            <input type="number" class="persons-number" placeholder="number of persons" min="1" max="10" required>
             <input type="date" class="reservation-date" name="reservation-date" required>
             <input type="time" class="reservation-time" required>
             <textarea type="text" class="more-details" placeholder="more details"></textarea>
