--- a/css/admin-messages.css
+++ b/css/admin-messages.css
@@ -69,8 +69,8 @@ body {
 
 .btn-style{
     font-size: var(--font-size);
-    width: 100px;
-    height: 50px;
+    width:90px;
+    height: 40px;
     background-color: var(--color-white);
     border-radius: var(--border-radius-3);
     -webkit-border-radius: var(--border-radius-3);
@@ -329,6 +329,9 @@ body {
 .message .info-container{
     width: 80%;
 }
+.message .info-container .reservation-id{
+  display: none;
+}
 .message .info-container .icon{
     width: 150px;
 }
@@ -353,9 +356,45 @@ body {
 }
 form.more-details{
     height: 500px !important ;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
 }
-form.more-details .display-none{
-    display: block !important;
+.more-details .open-msg{
+  display: none;
+}
+.more-details .display-none{
+    display: block;
+    opacity: 100%;
+}
+.more-details .info-container .icon{
+  display: none;  
+}
+.more-details .info-container .input-style{
+  font-size: 12px;
+}
+.more-details .info-container .customer-name{
+  font-size: 16px ;
+  font-weight: bold;
+}
+.more-details .message-content{
+  width: 100%;
+  height: 350px;
+  font-size: 12px;
+}
+.more-details .btns{
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.more-details .btns .reject-btn{
+  background-color: rgba(255, 0, 0, 0.807);
+  color: var(--color-white);
+}
+.more-details .btns .accept-btn{
+  background-color: var(--aside-links-color);
+  color: var(--color-white);
 }
 
 
