delete account and products

--- a/views/admin/customer.ejs
+++ b/views/admin/customer.ejs
@@ -69,10 +69,10 @@
     </div>
     <div class="page-details-container">
         <div class="details-page">
-            <form class="details-form" action="customer/update" enctype="multipart/form-data" method="post">
+            <form class="details-form" action="customer" enctype="multipart/form-data" method="post">
                 <div class="name-container input-field-container">
                     <i class="fa-solid fa-user"></i>
-                    <input type="text" name="name" class="name input-style" placeholder="Name" autocomplete="off"
+                    <input type="text" name="name" class="name-container input-style" placeholder="Name" autocomplete="off"
                         required />
                 </div>
                 <div class="phone-container input-field-container">
