--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -44,8 +44,7 @@
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
 
             </ul>
-            <button class="logout" onclick="logout()">logout <i
-                    class="fa-solid fa-arrow-right-from-bracket"></i></button>
+            <button class="logout">logout <i class="fa-solid fa-arrow-right-from-bracket"></i></button>
         </div>
         <div class="content">
             <h1 class="dashboard-title">
