add reservation schema

--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -46,7 +46,7 @@
 
     <!-- start reservation section -->
     <div class="reservation-container">
-        <form action="" method="none">
+        <form action="/reservation" method="post">
             <h2>book table</h2>
             <input type="text" class="person-name" placeholder="your name" required>
             <input type="text" class="person-phone" placeholder="phone number" required>
