reservation schema, and other edits

--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -74,7 +74,7 @@
                 <div class="part btns">
                     <input type="button" value="delete account" class="delete-btn">
                     <input type="button" value="edit" class="edit-btn">
-                    <input type="submit" value="save" class="save-btn">
+                    <input type="button" value="Save" class="save-btn" onclick="updateData()"/>
                     <input type="button" value="cancel" class="cancel-btn">
                 </div>
                 <div class="change-password part ">
