--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -37,7 +37,7 @@
             <ul>
                 <li class="dashboard"><a href="dashboard"><i class="fa-solid fa-house"></i> dashboard</a></li>
                 <li class="orders"><a href=""><i class="fa-solid fa-scroll"></i> orders</a></li>
-                <li class="messages"><a href=""><i class="fa-regular fa-envelope"></i> messages</a></li>
+                <li class="messages"><a href="messages"><i class="fa-regular fa-envelope"></i> Reservation</a></li>
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
 
             </ul>
@@ -72,7 +72,7 @@
                 <div class="part btns">
                     <input type="button" value="delete account" class="delete-btn">
                     <input type="button" value="edit" class="edit-btn">
-                    <input type="submit" value="save" class="save-btn">
+                    <input type="button" value="Save" class="save-btn" onclick="updateData()"/>
                     <input type="button" value="cancel" class="cancel-btn">
                 </div>
                 <div class="change-password part ">
