--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -39,10 +39,9 @@
                 </div>
                 <div class="right-header">
                     <a href="#" class="cart-icon"> <i class="fa-solid fa-cart-shopping"></i></a>
-                    <a href="login" class="login-icon">
+                    <a href="login" class="login-icon" onclick="redirect(event)" id="loginIc">
                         <i class="fa-regular fa-circle-user login-icon"></i>
                     </a>
-
                 </div>
             </div>
         </div>
