--- a/views/user/reservation.ejs
+++ b/views/user/reservation.ejs
@@ -38,10 +38,10 @@
             <ul>
                 <li class="dashboard"><a href="dashboard"><i class="fa-solid fa-house"></i> dashboard</a></li>
                 <li class="orders"><a href=""><i class="fa-solid fa-scroll"></i> orders</a></li>
-                <li class="messages"><a href="reservation"><i class="fa-regular fa-envelope"></i> Reservation</a></li>
+                <li class="messages"><a href="messages"><i class="fa-regular fa-envelope"></i> Reservation</a></li>
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
             </ul>
-            <button class="logout">logout <i class="fa-solid fa-arrow-right-from-bracket"></i></button>
+            <button class="logout" onclick="logout()">logout <i class="fa-solid fa-arrow-right-from-bracket"></i></button>
         </div>
         <div class="content">
             <h1 class="messages-title">
