--- a/css/menu.css
+++ b/css/menu.css
@@ -98,6 +98,9 @@ button {
   width: 228.4px;
   height: 179.04px;
 }
+.product .product-id {
+  display: none;
+}
 .product .product-info {
   width: 100%;
   height: 30%;
@@ -142,7 +145,7 @@ button {
 .cart-tap {
   background-color: #333;
   color: #eee;
-  width: 400px;
+  width: 350px;
   height: 100%;
   position: fixed;
   top: 0;
