--- a/css/menu.css
+++ b/css/menu.css
@@ -192,7 +192,7 @@ body.activeTabCart .cart-tap {
   right: 0;
 }
 body.activeTabCart .page-container {
-  width: calc(100% - 400px);
+  width: calc(100% - 350px);
 }
 .cart-tap .list-cart {
   width: 100%;
@@ -207,7 +207,8 @@ body.activeTabCart .page-container {
   width: 100%;
   height: 80px;
   overflow: hidden;
-  display: flex;
+  display: grid;
+  grid-template-columns: 140px 90px 50px 20px;
   gap: 0;
   justify-content: space-around;
   align-items: center;
@@ -223,35 +224,28 @@ body.activeTabCart .page-container {
   -ms-transition: 0.4s;
   -o-transition: 0.4s;
 }
-.cart-tap .list-cart .product img {
+/* .cart-tap .list-cart .product img {
   height: 100%;
   width: 28%;
-}
+} */
 .cart-tap .list-cart .product h4 {
-  width: 30%;
   text-overflow: ellipsis;
   text-wrap: nowrap;
   overflow: hidden;
 }
 .cart-tap .list-cart .product .quantity {
-  width: 18%;
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 20px 50px 20px;
+  align-content: center;
 }
 .cart-tap .list-cart .product .quantity .quan {
-  margin: 5px;
+  width: 50px;
+  text-align: center;
+  /* margin: 5px; */
 }
-.quantity .dec,
-.quantity .inc {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  outline: none;
-  border: none;
-  background-color: #333;
-  color: white;
+.quantity i {
+  color: #ffffff;
+  /* font-size: 12px; */
 }
 
 .cart-tap .list-cart .product h4 {
@@ -259,11 +253,12 @@ body.activeTabCart .page-container {
   text-transform: capitalize;
 }
 .cart-tap .list-cart .product p {
-  width: 19%;
   text-align: center;
   text-wrap: nowrap;
 }
 .cart-tap .list-cart .product i {
-  width: 5%;
   cursor: pointer;
+}
+.cart-tap .list-cart .product .remove {
+  color: rgb(255 134 0);
 }
