--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -100,6 +100,7 @@
 
     <!-- connect javascript file -->
     <script type="module" src="/js/reservation.js"></script>
+    <script type="module" src="/js/.js"></script>
 </body>
 
 </html>
