--- a/css/admin-products.css
+++ b/css/admin-products.css
@@ -259,12 +259,12 @@ body {
   -moz-border-radius: var(--border-radius-3);
   -ms-border-radius: var(--border-radius-3);
   -o-border-radius: var(--border-radius-3);
-  transition: 0.5s;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  -o-transition: 0.5s;
+  transition:0.5s linear;
   background-color: var(--color-background);
+  -webkit-transition:0.5s linear;
+  -moz-transition:0.5s linear;
+  -ms-transition:0.5s linear;
+  -o-transition:0.5s linear;
 }
 
 .product-item .product-id,
@@ -288,7 +288,7 @@ body {
   width: 30px;
 }
 .product-item .part {
-  width: 20%;
+  width: 100px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -300,7 +300,7 @@ body {
   width: 100%;
   height: 100%;
   display: grid;
-    grid-template-columns: 30% 25% 10% 25% 10%;
+  grid-template-columns: 30% 25% 10% 25% 10%;
   align-items: center;
   overflow: hidden;
   margin-bottom: 10px;
@@ -310,11 +310,11 @@ body {
   -moz-border-radius: var(--border-radius-3);
   -ms-border-radius: var(--border-radius-3);
   -o-border-radius: var(--border-radius-3);
-  transition: 0.5s;
-  -webkit-transition: 0.5s;
-  -moz-transition: 0.5s;
-  -ms-transition: 0.5s;
-  -o-transition: 0.5s;
+  transition: 0.5s linear;
+  -webkit-transition: 0.5s linear;
+  -moz-transition: 0.5s linear;
+  -ms-transition: 0.5s linear;
+  -o-transition: 0.5s linear;
 }
 .product-item img {
   width: 100px;
