Updating product done

--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -92,7 +92,7 @@
                 </div>
                 <div class="image-container input-field-container">
                     <label>image</label>
-                    <input type="file" name="product-image" class="product-name input-style" autocomplete="off"
+                    <input type="file" name="product-image" class="product-image input-style" autocomplete="off"
                         required />
                 </div>
 
