update checkout page

--- a/views/check-out.ejs
+++ b/views/check-out.ejs
@@ -79,8 +79,8 @@
                             <label for="cod" class="cod-label">Cash on Delivery</label>
                         </div>
                         <div class="submit-btn">
-                            <button class="back" onclick="backFunc()">back</button>
-                            <button class="submit" onclick="submitFunc()">submit order</button>
+                            <input type="button" class="back" onclick="backFunc()" value="back">
+                            <input type="submit" class="submit" value="Submit Order">
                         </div>
 
                     </div>
