--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -53,7 +53,7 @@
             <input type="number" class="persons-number" placeholder="number of persons" min="1" max="10" required>
             <input type="datetime-local" class="reservation-date" id="date-time" name="reservation-date" required>
             <!-- <input type="time" class="reservation-time" required> -->
-            <textarea type="text" class="more-details" placeholder="more details"></textarea>
+            <textarea type="text" class="more-details" placeholder="more details(Optional)"></textarea>
             <input type="submit" class="send-button" value="book table">
         </form>
     </div>
@@ -100,7 +100,6 @@
 
     <!-- connect javascript file -->
     <script type="module" src="/js/reservation.js"></script>
-    <script type="module" src="/js/.js"></script>
 </body>
 
 </html>
