finishing the admin orders page

--- a/css/admin-orders.css
+++ b/css/admin-orders.css
@@ -411,6 +411,7 @@ margin-bottom: 15px;
 
 .more-details .order-details table th,
 table td {
+  text-overflow: ellipsis;
   text-align: start;
   border-bottom: 1px solid rgba(160, 162, 180, 0.425);
 }
