--- a/views/admin/messages.ejs
+++ b/views/admin/messages.ejs
@@ -37,8 +37,8 @@
         <div class="aside">
             <ul>
                 <li class="dashboard"><a href="dashboard"><i class="fa-solid fa-house"></i> dashboard</a></li>
-                <li class="customers"><a href="customer"><i class="fa-regular fa-user"></i> customers</a></li>
-                <li class="orders"><a href=""><i class="fa-solid fa-scroll"></i> orders</a></li>
+                <li class="customers"><a href="customer"><i class="fa-regular fa-user"></i> users</a></li>
+                <li class="orders"><a href="orders"><i class="fa-solid fa-scroll"></i> orders</a></li>
                 <li class="messages"><a href="messages"><i class="fa-regular fa-envelope"></i> messages</a></li>
                 <li class="products"><a href="products"><i class="fa-solid fa-utensils"></i> products</a></li>
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
