--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -99,7 +99,7 @@
     <!-- end preloading -->
 
     <!-- connect javascript file -->
-    <script type="module" src="/js/reservation.js"></script>
+    <script src="/js/reservation.js"></script>
 </body>
 
 </html>
