--- a/views/user/reservation.ejs
+++ b/views/user/reservation.ejs
@@ -37,7 +37,7 @@
         <div class="aside">
             <ul>
                 <li class="dashboard"><a href="dashboard"><i class="fa-solid fa-house"></i> dashboard</a></li>
-                <li class="orders"><a href=""><i class="fa-solid fa-scroll"></i> orders</a></li>
+                <li class="orders"><a href="orders"><i class="fa-solid fa-scroll"></i> orders</a></li>
                 <li class="messages"><a href="messages"><i class="fa-regular fa-envelope"></i> Reservation</a></li>
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
             </ul>
