--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -39,7 +39,7 @@
                 </div>
                 <div class="right-header">
                     <a href="#" class="cart-icon"> <i class="fa-solid fa-cart-shopping"></i></a>
-                    <a href="login" class="login-icon" onclick="redirect(event)" id="loginIc">
+                    <a href="login" class="login-icon" onclick="redirect()" id="loginIc">
                         <i class="fa-regular fa-circle-user login-icon"></i>
                     </a>
                 </div>
@@ -133,7 +133,6 @@
     </div>
     <!-- end preloading -->
     <!-- connect javascript file -->
-    <script src="/js/menu.js"></script>
+    <script type="module" src="/js/menu.js"></script>
 </body>
-
 </html>
