--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -36,7 +36,7 @@
                 </ul>
             </div>
             <div class="right-header">
-                <a href="login" class="login-icon" onclick="redirect(event)" id="loginIc">
+                <a href="login" class="login-icon" id="loginIc" onclick="redirect(event)">
                     <i class="fa-regular fa-circle-user login-icon"></i>
                 </a>
             </div>
@@ -99,7 +99,7 @@
     <!-- end preloading -->
 
     <!-- connect javascript file -->
-    <script src="/js/reservation.js"></script>
+    <script type="module" src="/js/reservation.js"></script>
 </body>
 
 </html>
