--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -27,7 +27,7 @@
             <i class="fa-solid fa-bars" id="menu-icon"></i>
             <span class="logo"><a href="/home">YKPO Cafe</a></span>
             <div class="right-header">
-                <div class="user-name">hey <span class="name">Admin</span></div>
+                <div class="user-name">hey <span class="name"></span></div>
                 <img class="user-img" src="/images/nigga.jpg" alt="">
             </div>
         </div>
