--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -76,62 +76,10 @@
                     </p>
                 </div>
             </div>
-            <div class="previous-orders">
-                <h1 class="title">Recent orders</h1>
-                <table class="prev-orders-table" name="prev-orders">
-                    <thead>
-                        <tr>
-                            <th>customers name</th>
-                            <th>order number</th>
-                            <th>price </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>ahmad mohammed</td>
-                            <td>1</td>
-                            <td>235 $</td>
-                        </tr>
-                        <tr>
-                            <td> hoda alhoot</td>
-                            <td>2</td>
-                            <td>50 $</td>
-                        </tr>
-                        <tr>
-                            <td>ali aldkhlaoe</td>
-                            <td>3</td>
-                            <td>15 $</td>
-                        <tr>
-                            <td>ahmad mohammed</td>
-                            <td>4</td>
-                            <td>235 $</td>
-                        </tr>
-                        <tr>
-                            <td> hoda alhoot</td>
-                            <td>5</td>
-                            <td>50 $</td>
-                        </tr>
-                        <tr>
-                            <td>ali aldkhlaoe</td>
-                            <td>6</td>
-                            <td>15 $</td>
-                        <tr>
-                            <td>ahmad mohammed</td>
-                            <td>7</td>
-                            <td>235 $</td>
-                        </tr>
-                        <tr>
-                            <td> hoda alhoot</td>
-                            <td>8</td>
-                            <td>50 $</td>
-                        </tr>
-                        <tr>
-                            <td>ali aldkhlaoe</td>
-                            <td>9</td>
-                            <td>15 $</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="recent-reservation">
+                <h1 class="title">reservations</h1>
+                <div class="messages-table">
+                </div>
             </div>
         </div>
     </div>
@@ -143,6 +91,7 @@
         <div class="three"></div>
     </div>
     <!-- end preloading -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-dashboard.js"></script>
 </body>
 
