--- a/css/admin-dashboard.css
+++ b/css/admin-dashboard.css
@@ -66,6 +66,65 @@ body {
   -o-transition: 0.3s;
 }
 
+
+.btn-style{
+    font-size: var(--font-size);
+    width:90px;
+    height: 40px;
+    background-color: var(--color-white);
+    border-radius: var(--border-radius-3);
+    -webkit-border-radius: var(--border-radius-3);
+    -moz-border-radius: var(--border-radius-3);
+    -ms-border-radius: var(--border-radius-3);
+    -o-border-radius: var(--border-radius-3);
+    cursor: pointer;
+    box-shadow: 5px 5px 10px var(--color-light);
+    text-transform: capitalize;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    font-family: var(--statics-font);
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn-style:hover{
+    box-shadow: none;
+}
+
+.display-none{
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    opacity: 0%;
+    display: none;
+}
+.input-style{
+    background-color: transparent;
+    font-size: var(--font-size);
+    font-family: var(--statics-font);
+    pointer-events: none;
+    text-transform: capitalize;
+}
+.flex-row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.flex-column{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: space-between;
+
+}
+
+
 /* start header style */
 .header {
   padding: 10px 0;
@@ -192,7 +251,8 @@ body {
 .dashboard-container .content {
   width: calc(100% - 290px);
   height: 100%;
-  box-shadow: var(--box-shadow);
+  height: fit-content;
+  /* box-shadow: var(--box-shadow); */
   position: absolute;
   right: 0;
 }
@@ -265,7 +325,7 @@ body {
 }
 
 /* start table section */
-.previous-orders {
+.recent-reservation {
   padding: 30px;
   display: flex;
   flex-direction: column;
@@ -303,3 +363,123 @@ table td {
 
 /* end table section */
 /* end dashboard container section */
+
+
+/* start messagess content */
+.messages-table {
+  font-family: var(--statics-font);
+  font-size: 20px;
+  padding: 30px 10px;
+  min-width: 370px;
+  width: 95%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  box-shadow: var(--box-shadow);
+  border-radius: var(--border-radius-3);
+  -webkit-border-radius: var(--border-radius-3);
+  -moz-border-radius: var(--border-radius-3);
+  -ms-border-radius: var(--border-radius-3);
+  -o-border-radius: var(--border-radius-3);
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
+.messages-table .message {
+  width: 100%;
+  height: 60px;
+  overflow: hidden;
+  margin-bottom: 15px;
+  box-shadow: 0 5px 20px var(--color-light);
+  border-radius: var(--border-radius-3);
+  -webkit-border-radius: var(--border-radius-3);
+  -moz-border-radius: var(--border-radius-3);
+  -ms-border-radius: var(--border-radius-3);
+  -o-border-radius: var(--border-radius-3);
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+  background-color: var(--color-background);
+  padding: 20px;
+}
+
+.message .info-container{
+    width: 80%;
+}
+.message .info-container .reservation-id{
+  display: none;
+}
+.message .info-container .icon{
+    width: 200px;
+}
+.message .info-container .icon i{
+    font-size: 25px;
+}
+.message .open-msg{
+    font-size: var(--font-size);
+    color: orangered;
+    font-family: var(--main-font);
+    background-color: transparent;
+    text-transform: capitalize;
+    cursor: pointer;
+}
+@media (max-width:650px) {
+    :root{
+        --font-size:12px
+    }
+    .icon p{
+        display: none;
+    }
+}
+form.more-details{
+    height: 500px !important ;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.more-details .open-msg{
+  display: none;
+}
+.more-details .display-none{
+    display: block;
+    opacity: 100%;
+}
+.more-details .info-container .icon{
+  display: none;  
+}
+.more-details .info-container .input-style{
+  font-size: 12px;
+}
+.more-details .info-container .customer-name{
+  font-size: 16px ;
+  font-weight: bold;
+}
+.more-details .message-content{
+  width: 100%;
+  height: 350px;
+  font-size: 12px;
+}
+.more-details .btns{
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.more-details .btns .reject-btn{
+  background-color: rgba(255, 0, 0, 0.807);
+  color: var(--color-white);
+}
+.more-details .btns .accept-btn{
+  background-color: var(--aside-links-color);
+  color: var(--color-white);
+}
+
+
+/* end details page
