--- a/views/home.ejs
+++ b/views/home.ejs
@@ -125,7 +125,7 @@
   <!-- end preloading -->
 
   <!-- connect javascript file -->
-  <script type="module" src="/js/home.js"></script>
+  <script src="/js/home.js"></script>
 </body>
 
 </html>
