--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -133,6 +133,7 @@
     </div>
     <!-- end preloading -->
     <!-- connect javascript file -->
-    <script type="module" src="/js/menu.js"></script>
+    <script src="/js/menu.js"></script>
 </body>
+
 </html>
